--- a/css/index.css
+++ b/css/index.css
@@ -5,3 +5,19 @@
 			border-radius: 5px;
 			font-size: 14px;
 		}
+.tijiao{
+	width: 100px;
+	height: 40px;
+	border: 1px solid red;
+	line-height: 40px;
+	text-align: center;
+}
+.form{
+	width: 100%;
+	height: 50px;
+}
+.form input{
+	width: 100px;
+	height: 40px;
+	border: 1px solid #23e34c;
+}
