--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 #btn{
 			width: 100%;
 			height: 100px;
-			border:1px solid red;
+			border:1px solid yellow;
 			text-align: center;
 			border-radius: 5px;
 			font-size: 14px;
